# vk.py

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: labeler.yml
CHANGES/: 1.0.0_26.feature  1.0.0_27.feature
docs/: first-steps.md  index.md
examples/: auth_manager_example.py
first-steps/: index.html
first-steps-background/: index.html
first-steps-vk/: index.html
first-steps/auth/: index.html
first-steps/background/: index.html
first-steps/install/: index.html
first-steps/vk/: index.html
install/: index.html
search/: search_index.json
tests/: test_auth.py  test_auth_manager.py  test_handling_bad_auth.py  test_vk.py
vk/: __init__.py  constants.py  vk.py
vk/bot_framework/: __init__.py
vk/bot_framework/dispatcher/: blueprints.py  dispatcher.py  extension.py  handler.py  middleware.py  rule.py
vk/bot_framework/middlewares/: middlewares.py
vk/bot_framework/rules/: rules.py
vk/exceptions/: __init__.py  errors.py  errors_dispatcher.py
vk/keyboards/: keyboard.py
vk/longpoll/: __init__.py
vk/longpoll/user/: longpoll.py
vk/methods/: api.py  appwidgets.py
vk/types/: base.py  message.py
vk/types/events/community/: event.py
vk/types/responses/: messages.py
vk/utils/: auth_manager.py  deprecated.py  mixins.py  task_manager.py
vk/utils/vkscript/: __init__.py  converter.py  execute.py
vk/utils/vkscript/handlers/: assignments.py  blocks.py  calls.py  expressions.py  statements.py  types.py
