[tool.poetry]
name = "vk.py"
version = "1.0.0a1"
description = "Extremely-fast Python 3.6+ toolkit for create applications work`s with VKAPI. Has bot framework out of-the-box."
authors = ["prostomarkeloff"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/prostomarkeloff/vk.py"
repository = "https://github.com/prostomarkeloff/vk.py"
keywords = ["vk-api", "asyncio", "vkbot", "vkapi", "vk-bot"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
watchgod = "^0.5.0"
aiohttp = "^3.6"
pydantic = "^1.1"
async-generator = {version = "^1.10", python = "3.6"}
contextvars = {version = "^2.4", python = "3.6"}
vbml = {version = "^0.2.0", optional = true}
[tool.poetry.dev-dependencies]
pytest = {version = "^5.2", allows-prereleases = true}
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pre-commit = {version = "^1.20", allows-prereleases = true}
reorder-python-imports = "^1.8"
mkdocs = "^1.0"
mkdocs-material = "^4.4"
pytest-asyncio = "^0.10.0"

[tool.black]
line-length = 79
target-version = ["py36", "py37"]

[tool.poetry.extras]
vbml = ["vbml"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
